--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -9,7 +9,7 @@
     <div class="row py-2 d-flex team-card-header {{if this.collapsed "rounded" "rounded-top"}}">
       <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
         {{#if this.args.team.private}}
-          <img class="icon icon-big-button py-auto" src="/ember/assets/images/encrypted_small.svg" alt="">
+          <img class="icon icon-big-button py-auto" src="/ember/assets/images/encrypted_small-white.svg" alt="">
 
         {{else}}
           <img class="icon icon-big-button py-auto" src="/ember/assets/images/members-white.svg" alt="">
@@ -45,7 +45,7 @@
 
     <BsCollapse class="row bg-blue-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
       <div class="col pl-4 pr-4 pb-2 list-folder-header">
-        {{#if @folder.description}}
+        {{#if @team.description}}
           <div class="row py-3">
             <div class="col">
               <p class="text-muted description mb-0">{{@team.description}}</p>
@@ -55,7 +55,7 @@
         <div class="pt-2">
           {{#if @team.folders}}
             {{#each @team.folders as |folder|}}
-              <div class="row bg-white border border-radius-4 mb-5">
+              <div class="row bg-white border border-radius-4 mb-5-folder">
                 <div class="col folder-no-p">
                   <FolderShow @folder={{folder}}/>
                 </div>
