--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -12,9 +12,11 @@
     <div class="d-flex justify-content-between align-items-center reduced-padding-for-icons">
       <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
         <img class="icon-medium-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
+        <BsTooltip @title={{t "folders.tooltips.delete"}}/>
       </DeleteWithConfirmation>
       <a class="margin-for-buttons" role="button" {{on "click" this.toggleFolderEdit}}>
         <img class="icon-medium-button " src="/ember/assets/images/edit.svg" alt="edit">
+        <BsTooltip @title={{t "folders.tooltips.edit"}}/>
       </a>
     </div>
     <div class="col-auto ml-0 pl-0 my-auto">
@@ -31,7 +33,7 @@
 <BsCollapse  @collapsed={{this.collapsed}}>
   <div class="folder-collapse-box">
     {{#if @folder.description}}
-      <div class="row py-3">
+      <div class="row pt-3">
         <div class="col">
           <p class="text-muted description mb-0">{{@folder.description}}</p>
         </div>
