--- a/frontend/app/templates/components/team-member-configure.hbs
+++ b/frontend/app/templates/components/team-member-configure.hbs
@@ -6,6 +6,15 @@
     <BsTab as |tab|>
       <tab.pane id="members" @title={{t "teams.show.members"}}>
         <div class="columns members">
+          <div class="row mt-1">
+            <div class="col-sm-12">
+              <div class="float-right">
+                <PowerSelectTypeahead @renderInPlace="true" @options={{this.candidates}} @search={{this.search}} @onChange={{this.addMember}} @placeholder={{t "teammembers.new.title"}} as |candidate|>
+                  {{candidate.label}}
+                </PowerSelectTypeahead>
+              </div>
+            </div>
+          </div>
           <div class="row mt-3">
             <div class="col">
               {{#each this.members as |member|}}
@@ -22,11 +31,6 @@
                   {{/if}}
                 </div>
               {{/each}}
-            </div>
-            <div class="col-sm-4 float-right">
-              <PowerSelectTypeahead @renderInPlace="true" @options={{this.candidates}} @search={{this.search}} @onChange={{this.addMember}} @placeholder={{t "teammembers.new.title"}} as |candidate|>
-                {{candidate.label}}
-              </PowerSelectTypeahead>
             </div>
           </div>
         </div>
