--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -304,3 +304,15 @@ li a {
   padding: 5px 10px 3px 8px !important;
   margin-left: 10px;
 }
+
+.columns li {
+  width: 32%;
+  display: inline-block;
+  padding: 3px;
+  padding-left: 8px;
+  padding-top: 5px;
+  margin-bottom: 4px;
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+  background-color: #f5f5f5;
+}
