--- a/frontend/app/templates/components/team-member-configure.hbs
+++ b/frontend/app/templates/components/team-member-configure.hbs
@@ -17,20 +17,23 @@
           </div>
           <div class="row mt-3">
             <div class="col">
-              {{#each this.members as |member|}}
-                <div class="d-flex">
-                  <p class="col-md-4 mb-0 pl-0">{{member.label}}</p>
-                  {{#if member.admin}}
-                    <img src="/ember/assets/images/penguin.svg" alt="admin">
-                  {{else}}
-                    {{#if member.deletable}}
-                      <a role="button" {{on "click" (fn this.deleteMember member)}}>
-                        <img src="/ember/assets/images/remove.svg" alt="remove">
-                      </a>
+              <ol>
+                {{#each this.members as |member|}}
+                  <li>
+                    {{member.label}}
+                    {{#if member.admin}}
+                      <img class="float-right" src="/ember/assets/images/penguin.svg" alt="admin">
+                    {{else}}
+                      {{#if member.deletable}}
+                        <a class="float-right" role="button" {{on "click" (fn this.deleteMember member)}}>
+                          <img src="/ember/assets/images/remove.svg" alt="remove">
+                        </a>
+                      {{/if}}
                     {{/if}}
-                  {{/if}}
-                </div>
-              {{/each}}
+                  </li>
+                {{/each}}
+              </ol>
+
             </div>
           </div>
         </div>
