fix dropdown styling

--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -34,7 +34,7 @@ nav a.nav-link {
 
 .dropdown .btn-group > a:hover {
   color: #ffffff;
-  background-color: #1e5a96;
+  background-color: rgba(15, 101, 139, 0.6) !important;
   border-color: #195575;
 }
 
