--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -12,11 +12,11 @@
     <div class="d-flex justify-content-between align-items-center reduced-padding-for-icons">
       <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
         <img class="icon-medium-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
-        <BsTooltip @title={{t "folders.tooltips.delete"}}/>
+        <BsTooltip @title={{t "folders.tooltips.delete"}} @delayShow="1000" />
       </DeleteWithConfirmation>
       <a class="margin-for-buttons" role="button" {{on "click" this.toggleFolderEdit}}>
         <img class="icon-medium-button " src="/ember/assets/images/edit.svg" alt="edit">
-        <BsTooltip @title={{t "folders.tooltips.edit"}}/>
+        <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
       </a>
     </div>
     <div class="col-auto ml-0 pl-0 my-auto">
