--- a/frontend/app/styles/folder-show.scss
+++ b/frontend/app/styles/folder-show.scss
@@ -19,6 +19,8 @@
   background-color: #c7d9e9;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
 .br-4 {
