--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -48,13 +48,13 @@
         </span>
         <div class="nav-item mr-2">
           <a href="/profile">
-            <span class="helper"></span><img class="icon-medium-button icon mr-2 ml-1" src="/ember/assets/images/settings_white.svg" alt="v">
+            <span class="helper"></span><img class="icon-big-button icon mr-2 ml-1" src="/ember/assets/images/settings_white.svg" alt="v">
             <BsTooltip @title={{t "tooltips.settings_profile"}} @delayShow="1000" />
           </a>
         </div>
         <div class="nav-item mr-2">
           <a href="/session/destroy">
-            <span class="helper"></span><img class="icon icon-medium-button" src="/ember/assets/images/sign_out-white.svg" alt="Logout">
+            <span class="helper"></span><img class="icon icon-big-button" src="/ember/assets/images/sign_out-white.svg" alt="Logout">
             <BsTooltip @title={{t "logout"}} @delayShow="1000" />
           </a>
         </div>
