--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -14,11 +14,11 @@
           <img class="icon icon-big-button py-auto" src="/ember/assets/images/members-white.svg" alt="">
         {{/if}}
       </div>
-      <div class="col my-auto pl-0" role="button" {{on "click" this.collapse}}>
-        <h3 class="d-inline">{{@team.name}}</h3>
+      <div class="col pl-0" role="button" {{on "click" this.collapse}}>
+        <h5 class="d-inline">{{@team.name}}</h5>
       </div>
       <div class="col-sm-2 d-flex justify-content-between align-items-center">
-        <DeleteWithConfirmation @record={{@team}} @didDelete={{this.transitionToIndex}}>
+        <DeleteWithConfirmation @class="mx-1" @record={{@team}} @didDelete={{this.transitionToIndex}}>
           <img class="icon-big-button" src="/ember/assets/images/delete-white.svg" alt="delete">
           <BsTooltip @title={{t "teams.delete"}} @delayShow="1000"/>
         </DeleteWithConfirmation>
@@ -47,16 +47,17 @@
     </div>
 
     <BsCollapse class="row bg-blue-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
-      <div class="col pl-4 pr-4 pb-2 list-folder-header">
+      <div class="col px-4 py-3 list-folder-header">
         {{#if @team.description}}
-          <div class="row py-3">
+          <div class="row">
             <div class="col">
               <p class="text-muted description mb-0">{{@team.description}}</p>
             </div>
           </div>
         {{/if}}
-        <div class="pt-2">
+
           {{#if @team.folders}}
+          <div class="pt-2">
             {{#each @team.folders as |folder|}}
               <div class="row bg-white border border-radius-4 mb-5-folder">
                 <div class="col folder-no-p">
@@ -64,10 +65,13 @@
                 </div>
               </div>
             {{/each}}
+          </div>
+
           {{else}}
-            <em>{{t "teams.no_folders"}}</em>
+            <div class="{{if @team.description "pt-2"}}">
+              <em>{{t "teams.no_folders"}}</em>
+            </div>
           {{/if}}
-        </div>
       </div>
     </BsCollapse>
   </div>
