Remove new user button and adjust policy

--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -1,6 +1,6 @@
 <div id="api_user_content">
   {{#if api_users}}
-    <table class="table table-striped" id="api_users_table">
+    <table class="table table-striped mt-20" id="api_users_table">
       <tbody>
         <tr>
           <th> {{I18n 'username'}} </th>
