--- a/app/views/profile/_info.html.haml
+++ b/app/views/profile/_info.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%table.table.table-striped
+%table.table.table-striped.mt-20
   %tr
     %th= t '.last_login_at'
     %th= t '.last_login_from'
