--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -11,11 +11,11 @@
     </div>
     <div class="col-auto justify-content-between align-items-center">
       <DeleteWithConfirmation @class="mx-1" @record={{@folder}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-big-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
+        <img class="icon-big-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete folder">
         <BsTooltip @title={{t "folders.tooltips.delete"}} @delayShow="1000" />
       </DeleteWithConfirmation>
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleFolderEdit}}>
-        <img class="icon-big-button " src="/ember/assets/images/edit.svg" alt="edit">
+        <img class="icon-big-button " src="/ember/assets/images/edit.svg" alt="edit folder">
         <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
       </a>
     </div>
