--- a/frontend/app/templates/components/team-form.hbs
+++ b/frontend/app/templates/components/team-form.hbs
@@ -21,6 +21,7 @@
                 </div>
                 <div class="align-self-center mb-2 ml-2">
                   <img src="/ember/assets/images/info.svg" alt="info" class="info-icon icon-button">
+                  <BsTooltip @title={{t "teams.description.private"}} />
                 </div>
                 <div class="align-self-center mb-2 ml-2">
                   <Input id="checkbox-private" class="" @type="checkbox" @checked={{this.changeset.private}} @name="private"
