--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -56,7 +56,7 @@
           </div>
         {{/if}}
 
-          {{#if @team.folders}}
+        {{#if @team.folders}}
           <div class="pt-2">
             {{#each @team.folders as |folder|}}
               <div class="row bg-white border border-radius-4 mb-5-folder">
@@ -66,12 +66,11 @@
               </div>
             {{/each}}
           </div>
-
-          {{else}}
-            <div class="{{if @team.description "pt-2"}}">
-              <em>{{t "teams.no_folders"}}</em>
-            </div>
-          {{/if}}
+        {{else}}
+          <div class={{if @team.description "pt-2"}}>
+            <em>{{t "teams.no_folders"}}</em>
+          </div>
+        {{/if}}
       </div>
     </BsCollapse>
   </div>
