Some fixes and many small styling tweaks, refs: #54339

--- a/frontend/app/styles/folder-show.scss
+++ b/frontend/app/styles/folder-show.scss
@@ -19,6 +19,8 @@
   background-color: #c7d9e9;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
 .br-4 {
@@ -26,8 +28,8 @@
 }
 
 .no-acc {
-  margin-bottom: 8px;
-  margin-top: 4px;
+  margin-bottom: 12px;
+  margin-top: 12px;
 }
 
 .reduced-padding-for-icons {
