--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -183,14 +183,14 @@ li a {
 }
 
 .icon-big-button {
-  width: 30px !important;
-  height: 30px !important;
+  width: 25px !important;
+  height: 25px !important;
   display: inline;
 }
 
 .icon-medium-button {
-  width: 24px !important;
-  height: 24px !important;
+  width: 20px !important;
+  height: 20px !important;
   display: inline;
 }
 
@@ -247,8 +247,8 @@ li a {
 }
 
 .team-card-header {
-  height: 47.5px !important;
-  padding-top: 5px !important;
+  /*height: 47.5px !important;
+  padding-top: 5px !important;*/
   background-color: #1b8dc6;
   color: white !important;
   border: none;
@@ -298,4 +298,21 @@ li a {
 
 .pl-none {
   padding-left: 0 !important;
+}
+
+.search-badge {
+  padding: 5px 10px 3px 8px !important;
+  margin-left: 10px;
+}
+
+.columns li {
+  width: 32%;
+  display: inline-block;
+  padding: 3px;
+  padding-left: 8px;
+  padding-top: 5px;
+  margin-bottom: 4px;
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+  background-color: #f5f5f5;
 }
