--- a/frontend/app/templates/components/team-member-configure.hbs
+++ b/frontend/app/templates/components/team-member-configure.hbs
@@ -6,27 +6,34 @@
     <BsTab as |tab|>
       <tab.pane id="members" @title={{t "teams.show.members"}}>
         <div class="columns members">
+          <div class="row mt-1">
+            <div class="col-sm-12">
+              <div class="float-right">
+                <PowerSelectTypeahead @renderInPlace="true" @options={{this.candidates}} @search={{this.search}} @onChange={{this.addMember}} @placeholder={{t "teammembers.new.title"}} as |candidate|>
+                  {{candidate.label}}
+                </PowerSelectTypeahead>
+              </div>
+            </div>
+          </div>
           <div class="row mt-3">
             <div class="col">
-              {{#each this.members as |member|}}
-                <div class="d-flex">
-                  <p class="col-md-4 mb-0 pl-0">{{member.label}}</p>
-                  {{#if member.admin}}
-                    <img src="/ember/assets/images/penguin.svg" alt="admin">
-                  {{else}}
-                    {{#if member.deletable}}
-                      <a role="button" {{on "click" (fn this.deleteMember member)}}>
-                        <img src="/ember/assets/images/remove.svg" alt="remove">
-                      </a>
+              <ol>
+                {{#each this.members as |member|}}
+                  <li>
+                    {{member.label}}
+                    {{#if member.admin}}
+                      <img class="float-right" src="/ember/assets/images/penguin.svg" alt="admin">
+                    {{else}}
+                      {{#if member.deletable}}
+                        <a class="float-right" role="button" {{on "click" (fn this.deleteMember member)}}>
+                          <img src="/ember/assets/images/remove.svg" alt="remove">
+                        </a>
+                      {{/if}}
                     {{/if}}
-                  {{/if}}
-                </div>
-              {{/each}}
-            </div>
-            <div class="col-sm-4 float-right">
-              <PowerSelectTypeahead @renderInPlace="true" @options={{this.candidates}} @search={{this.search}} @onChange={{this.addMember}} @placeholder={{t "teammembers.new.title"}} as |candidate|>
-                {{candidate.label}}
-              </PowerSelectTypeahead>
+                  </li>
+                {{/each}}
+              </ol>
+
             </div>
           </div>
         </div>
