Do not allow creation or update of users unless auth db

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -6,6 +6,8 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %h1= t '.title'
+- if policy(User::Human).new?
+  = link_to t('admin.users.new.title'), new_admin_user_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped#team_table
   %tr
     %th= t '.username'
