fix colors of dropdown

--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -28,13 +28,13 @@ nav a.nav-link {
 
 .dropdown .btn-group > a {
   color: #ffffff;
-  background-color: #0f658b;
+  background-color: rgba(15, 101, 140, 0.58);
   border-color: #1b8cc5;
 }
 
 .dropdown .btn-group > a:hover {
   color: #ffffff;
-  background-color: rgba(15, 101, 139, 0.6) !important;
+  background-color: rgba(15, 101, 139, 0.89) !important;
   border-color: #195575;
 }
 
@@ -52,7 +52,7 @@ nav a.nav-link {
   margin-left: 10px !important;
   border-radius: 0;
   border: none;
-  background-color: #0f658c;
+  background-color: rgba(15, 101, 140, 0.58);
   color: #ffffff;
 }
 
