--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -1,6 +1,9 @@
 {{#if this.isFolderEditing}}
   <FolderForm @folder={{@folder}} @onAbort={{this.toggleFolderEdit}} @title={{t "folders.edit.title"}}/>
 {{/if}}
+{{#if this.isNewAccount}}
+  <AccountForm @onAbort={{this.toggleAccountCreating}} @title={{t "accounts.new.title"}}/>
+{{/if}}
 <div class="pl-2 pr-2 folder-card-header {{if this.collapsed "br-4"}}">
   <div class="d-flex row justify-content-between folder-show-header">
     <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
@@ -10,6 +13,10 @@
       <h6 class="d-inline">{{@folder.name}}</h6>
     </div>
     <div class="col-auto justify-content-between align-items-center">
+      <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleAccountCreating}}>
+        <img class="icon-big-button " src="/ember/assets/images/plus.svg" alt="new">
+        <BsTooltip @title={{t "tooltips.add_account"}} @delayShow="1000" />
+      </a>
       <DeleteWithConfirmation @class="mx-1" @record={{@folder}} @didDelete={{this.refreshRoute}}>
         <img class="icon-big-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete folder">
         <BsTooltip @title={{t "folders.tooltips.delete"}} @delayShow="1000" />
