--- a/app/views/frontend/index.html.haml
+++ b/app/views/frontend/index.html.haml
@@ -5,10 +5,10 @@
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
     %link{href: "/favicon.png", rel: "shortcut icon", type: "image/png"}/
-    %link{href: "http://localhost:4200/assets/vendor.css", media: "all", rel: "stylesheet"}
-    %link{href: "http://localhost:4200/assets/frontend.css", media: "all", rel: "stylesheet"}
-    %script{src: "http://localhost:4200/assets/vendor.js", defer: "true"}
-    %script{src: "http://localhost:4200/assets/frontend.js", defer: "true"}
+    %link{href: "/ember/assets/vendor-d6d9b22533ca9c5eadcb6d1bfed62032.css", media: "all", rel: "stylesheet"}
+    %link{href: "/ember/assets/frontend-80c453118f65f08100d72a80054a837a.css", media: "all", rel: "stylesheet"}
+    %script{src: "/ember/assets/vendor-0cbeb8ac4c1b979ba676861748bd6b7b.js", defer: "true"}
+    %script{src: "/ember/assets/frontend-fc58bfca29db45f83a5bd77c081fe370.js", defer: "true"}
     = csrf_meta_tags
     %title Cryptopus
   %body{"data-locale" => I18n.locale}
