--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -22,7 +22,7 @@
 
       <div class="form-inline">
         <div class="form-group search-wrapper">
-          <Input @class="form-control mr-sm-2" @type="search" @id="search" @value={{ this.navService.searchQuery }} placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}}  @autofocus={{this.isStartpage}}/>
+          <Input @class="form-control mr-sm-2" @type="search" @id="search" @value={{ this.navService.searchQuery }} placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}}  @autofocus={{this.isStartpage}} maxlength="70"/>
         </div>
       </div>
 
@@ -31,7 +31,7 @@
           <div class="btn-group">
             <a class="btn btn-primary" role="button" {{on "click" this.toggleAccountCreating}}>{{t "accounts.new.title"}}</a>
             <dd.toggle class="btn btn-primary dropdown-toggle-hided mr-3">
-              <span class="helper"></span><img class="icon-button" src="/ember/assets/images/angle-down.svg" alt="v">
+              <span class="helper"></span><img class="icon-button" src="/ember/assets/images/angle-down-white.svg" alt="v">
             </dd.toggle>
           </div>
           <dd.menu as |ddm|>
