Changed account card to an account list entry

--- a/frontend/app/styles/account-show.scss
+++ b/frontend/app/styles/account-show.scss
@@ -30,11 +30,11 @@
 }
 
 .show-password-link-sm {
-  width: 137px;
   margin-top: 0px !important;
   position: absolute;
   top: 0px;
   width: 100%;
+  height: 100%;
 }
 
 .result-username input:hover,
