--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -217,4 +217,11 @@
   }
 }
 
-
+.title {
+  color: white;
+  font-size: 1.75rem;
+}
+.title:hover {
+  text-decoration: none !important;
+  color: white;
+}
