--- a/frontend/app/templates/components/search-result-component.hbs
+++ b/frontend/app/templates/components/search-result-component.hbs
@@ -2,6 +2,6 @@
   <span class="my-auto">{{t "teams.index.search"}}</span>
   <div class="btn-group" role="group">
     <span type="button" class="btn bg-blue-three">{{@q}}</span>
-    <a href="/teams" type="button" class="btn bg-blue-three" {{on "click" this.clear_search }}>✕</a>
+    <a type="button" class="btn bg-blue-three" {{on "click" this.clear_search }}>✕</a>
   </div>
 </h5>
