Readd secret-input font import

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -4,7 +4,7 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 @import "ember-bootstrap/bootstrap";
 
 @import "ember-power-select/themes/bootstrap";
-
+@import "secret-input";
 @import "ember-power-select";
 
 @import "footer";
